sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:17: error: ')' expected but '}' found.
          }
          ^AlgBubbleSort2:25: error: Unmatched closing brace '}' ignored here
                             } 
                             ^